Fixed the spacing for the top/bottom of events when they are near the edges.

--- a/src/calendar.js.scss
+++ b/src/calendar.js.scss
@@ -1221,8 +1221,7 @@ div.calendar {
 
                     div.event {
                         position: absolute;
-                        margin-left: 0;
-                        margin-right: 0;
+                        margin: 0;
                         overflow: hidden;
                         z-index: 1;
                         left: $spacing;
